<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/helloLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="78dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/infoLinLayout">

        <TextView
            android:id="@+id/helloTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/text_hello"
            android:textSize="31sp"
            app:layout_constraintBottom_toTopOf="@id/helloTextView2"
            tools:text="@string/text_hello" />

        <TextView
            android:id="@+id/helloTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/text_description"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/infoLinLayout"
            tools:text="@string/text_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloLinLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/rubik_regular"
            android:textSize="16sp"
            android:text="Email"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/shape_rounded_edittext"
            android:fontFamily="@font/rubik_regular"
            android:textColorHint="@color/textColorEditText"
            android:hint="  xyz@gmail.com"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/rubik_regular"
            android:textSize="16sp"
            android:text="@string/text_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingBottom="10dp"
                android:background="@drawable/shape_rounded_edittext"
                android:hint="••••••••"
                android:fontFamily="@font/rubik_regular"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/textColorEditText"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:textSize="12sp"
            android:text="@string/text_forgot"/>

        <android.widget.Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rouded_signinbutton"
            android:backgroundTint="#48B2E7"

            android:fontFamily="@font/rubik_regular"
            android:text="@string/text_button_sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_create_acc"
        android:textColorHighlight="#EDF5F5F7"
        android:textColorLink="#00FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/buttonClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/shape_rounded_closebutton"

        app:layout_constraintBottom_toTopOf="@+id/helloLinLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>