<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true"
    tools:context=".OnBoard2Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image_2_onboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView1"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_journey"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/text_collection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintBottom_toTopOf="@id/seekBar"/>

    <LinearLayout
        android:id="@+id/seekBar"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/button_onboard_2">

        <View
            android:id="@+id/piece_1"
            android:layout_width="28dp"
            android:layout_height="4dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/piece_seekbar_disable" />

        <View
            android:id="@+id/piece_2"
            android:layout_width="43dp"
            android:layout_height="4dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/piece_seekbar_enable" />

        <View
            android:id="@+id/piece_3"
            android:layout_width="28dp"
            android:layout_height="4dp"
            android:background="@drawable/piece_seekbar_disable" />
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/button_onboard_2"
        style="@style/ButtonNextStyle"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:text="@string/text_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>